--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A Lannister always pays!",
   "main": "lannister.js",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "helmet": "^3.12.0",
